--- a/qr.html
+++ b/qr.html
@@ -1,13 +1,32 @@
-<script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
-<body style="text-align:center; padding-top:50px;">
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Office QR Beacon</title>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+    <style>
+        body { text-align: center; font-family: sans-serif; padding-top: 50px; background: white; }
+        #qrcode { display: inline-block; padding: 15px; border: 5px solid #333; border-radius: 10px; }
+    </style>
+</head>
+<body>
     <h2>SCAN TO CLOCK IN</h2>
-    <div id="qrcode" style="display:inline-block; min-width:300px; min-height:300px background:#eee;"></div>
+    <div id="qrcode"></div>
+    <p>Code updates every 30 seconds</p>
+
     <script>
+        // Update this to your ACTUAL GitHub index.html link
         const attendanceUrl = "https://vssapayments-eng.github.io/office-checkin/index.html"; 
-        const qrcode = new QRCode(document.getElementById("qrcode"), { width: 300, height: 300 });
-        setInterval(() => {
-            const token = btoa(Math.floor(Date.now() / 30000)).substring(0,8);
+        const qrContainer = document.getElementById("qrcode");
+        const qrcode = new QRCode(qrContainer, { width: 280, height: 280 });
+
+        function updateQR() {
+            const timeBlock = Math.floor(Date.now() / 30000);
+            const token = btoa(timeBlock).substring(0,8);
             qrcode.makeCode(attendanceUrl + "?auth=" + token);
-        }, 1000);
+        }
+
+        setInterval(updateQR, 1000); 
+        updateQR();
     </script>
 </body>
+</html>
