--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <script>
-        const GOOGLE_URL = "PASTE_YOUR_APPS_SCRIPT_URL_HERE"; 
+        const GOOGLE_URL = "https://script.google.com/macros/s/AKfycbxId_2Nar_aK3Dr-8JGEN2qLjc6iBBKsR3pUZyGllpqcn5sthk8rMerS4OtM5zJcbK53A/exec"; 
 
         window.onload = () => {
             const params = new URLSearchParams(window.location.search);
