--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <script>
-        const GOOGLE_URL = "YOUR_APPS_SCRIPT_URL_HERE"; // Ensure this is your latest /exec URL
+        const GOOGLE_URL = "https://script.google.com/macros/s/AKfycbzonysdJa_ftR1aVFNj-enEGZDXjH_jgAltb_p_AYymk_FVUVNvAJGl6gavj_6g5PuFXw/exec"; // Ensure this is your latest /exec URL
 
         window.onload = () => {
             const params = new URLSearchParams(window.location.search);
