--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <script>
         // 1. CONFIGURATION - PASTE YOUR URL BELOW
-        const GOOGLE_URL = "PASTE_YOUR_APPS_SCRIPT_URL_HERE";
+        const GOOGLE_URL = "https://script.google.com/macros/s/AKfycbxw9DkyLsRlsMGin6bdqJBc4W2EfBpVZxp2Z6is_A-cmKCFKJVY_bYclObNZM5XzjdX_Q/exec";
 
         // 2. SECURITY & INITIALIZATION
         window.onload = () => {
